# MyClassString

./: .gitignore  CMakeLists.txt  MyClassString.sln  MyClassString.vcxproj  MyClassString.vcxproj.filters  README.md  main.cpp  myClassString.hpp
